# py-unified-parser

./: Makefile  README.md  build-info.yml  configure.sh  pyproject.toml  version.json
src/py_unified_parser/: Config.py  IndicWord.py  LangSupport.py  Utils.py  Word.py  __init__.py  constants.py  version.py
src/py_unified_parser/dict/: ENGLISH.dict  English.EngHndCommon.dict  HINDI.dict
src/py_unified_parser/rules/: HINDI.rules  KANNADA.rules  TAMIL.rules
src/py_unified_parser/tsylb2-1.1/: INSTALL  Makefile  Makefile.in  README  addfwarn.c  addpcd.c  addstres.c  adjcase.c  aprules1.c  badicc1.c  config.status  configure  configure.in  csrates1.c  decode2.c  delchars.c  dhpars1.c  dpcode3.c  dpron2.c  dsylbs1.c  dwords1.c  enclcs1.c  encode2.c  exsylb2.c  fatalerr.c  fcndcls.h  frpcode.c  frules1.c  ftiers2.c  gdatadec.h  gdatadef.h  gnstrtab.c  gpcaux.c  gpcode3.c  gppf2.c  grules1.c  hashfcn.c  letfcns.c  lexpars.h  malloc2.c  (+41 more)
src/py_unified_parser/tsylb2-1.1/doc/: algorithm.doc  tsylb2.1
src/py_unified_parser/tsylb2-1.1/lexdata/foreign/: CC_final.txt  CC_inits.txt
src/py_unified_parser/tsylb2-1.1/lexdata/nat+for/: CC_bad_inits.txt  CC_final.txt  CC_inits.txt
src/py_unified_parser/tsylb2-1.1/lexdata/native/: CC_bad_inits_loose.txt  CC_final.txt  CC_inits.txt
tests/: test_parser.py
