[tool.poetry]
name = "py-unified-parser"
version = "1.0.0"
description = ""
authors = ["Arun Baby"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
packaging = "^20.9"
numpy = "^1.14"
g2p-en = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
flake8 = "^3.9.1"
isort = "^5.8.0"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

